# boomerang

./: Doxyfile.in  Makefile.am  boomerang.cpp  bootstrap  configure.ac  dbl_shared.cpp  driver.cpp  testAll.cpp
c/: CTest.cpp  CTest.h  Makefile.am  ansi-c-parser.ypp  ansi-c-scanner.lpp
codegen/: Makefile.am  chllcode.cpp  chllcode.h  syntax.cpp
db/: CfgTest.cpp  CfgTest.h  DfaTest.cpp  DfaTest.h  ExpTest.cpp  ExpTest.h  Makefile.am  ParserTest.cpp  ParserTest.h  ProcTest.cpp  ProcTest.h  ProgTest.cpp  ProgTest.h  RtlTest.cpp  RtlTest.h  StatementTest.cpp  StatementTest.h  basicblock.cpp  cfg.cpp  checkstrings.cpp  dataflow.cpp  exp.cpp  insnameelem.cpp  insnameelem.h  managed.cpp  operstrings.h  proc.cpp  prog.cpp  register.cpp  rtl.cpp  signature.cpp  signatureStubs.cpp  sslinst.cpp  sslparser.ypp  sslscanner.lpp  statement.cpp  table.cpp  table.h  testDbase.cpp  testExp.cpp  (+9 more)
doc/: AUTHORS  LICENSE.TERMS  README
frontend/: FrontPentTest.cpp  FrontPentTest.h  FrontSparcTest.cpp  FrontSparcTest.h  Makefile.am  ParserTest.cpp  ParserTest.h  decoder.h  frontend.cpp  insnameelem.cpp  insnameelem.h  mipsdecoder.cpp  mipsdecoder.h  mipsfrontend.cpp  mipsfrontend.h  mltk.sh.in  njmcDecoder.cpp  pentiumdecoder.cpp  pentiumdecoder.h  pentiumfrontend.cpp  pentiumfrontend.h  ppcdecoder.cpp  ppcdecoder.h  ppcfrontend.cpp  ppcfrontend.h  register.cpp  register.h  sparcdecoder.cpp  sparcdecoder.h  sparcfrontend.cpp  sparcfrontend.h  sslinst.cpp  sslinst.h  sslparser.ypp  sslscanner.lpp  st20decoder.cpp  st20decoder.h  st20frontend.cpp  st20frontend.h
frontend/machine/hppa/: dbm  dec  decoder.cpp  decoder.m  decoder_low.cpp  decoder_low.m  disassembler.2.m  disassembler.cpp  disassembler.m  disassembler9.m  enc.c  enc.h  fronthppa.cpp  hppa-names.cpp  hppa-names.h  hppa.2.spec  hppa.pat.m  hppa.spec  hppa.ssl  hppa2.spec  hppa9.spec  hppadis.spec  simple.cpp  simple.m  simple.spec
frontend/machine/mc68k/: decoder.cpp  decoder.m  decoder_low.cpp  decoder_low.m  front68k.cpp  mc68000.spec  mc68k.pat.cpp  mc68k.ssl
frontend/machine/mips/: check.spec  decoder.m  mips.ssl  names.spec
frontend/machine/pentium/: 386dis.spec  core.spec  decoder.m  disassembler.cpp  disassembler.m  pentium.ssl
frontend/machine/ppc/: core.spec  decoder.m  ppc.nw  ppc.ssl  synth.spec
frontend/machine/sparc/: decoder.m  dis.spec  disassembler.cpp  disassembler.m  sparc-names.h  sparc.ssl
frontend/machine/st20/: core.spec  decoder.m  st20.ssl.m4
include/: BinaryFile.h  BinaryFileStub.h  basicblock.h  boomerang.h  cfg.h  cluster.h  constraint.h  dataflow.h  decoder.h  exp.h  exphelp.h  frontend.h  hllcode.h  log.h  managed.h  memo.h  operator.h  proc.h  prog.h  register.h  rtl.h  sigenum.h  signature.h  sslinst.h  statement.h  transformer.h  type.h  types.h  util.h  visitor.h  xmlprogparser.h
loader/: ArchiveFile.cpp  BinaryFile.cpp  BinaryFileFactory.cpp  BinaryFileStub.cpp  ComBinaryFile.cpp  ComBinaryFile.h  DOS4GWBinaryFile.cpp  DOS4GWBinaryFile.h  ElfArchiveFile.cpp  ElfBinaryFile.cpp  ElfBinaryFile.h  ExeBinaryFile.cpp  ExeBinaryFile.h  HpSomBinaryFile.cpp  HpSomBinaryFile.h  IntelCoffFile.cpp  IntelCoffFile.h  LoaderTest.cpp  LoaderTest.h  MachOBinaryFile.cpp  MachOBinaryFile.h  Makefile.am  PalmBinaryFile.cpp  PalmBinaryFile.h  SymTab.cpp  SymTab.h  Win32BinaryFile.cpp  Win32BinaryFile.h  bffDump.cpp  microX86dis.c  palmsystraps.h  syself.h  testLoader.cpp
loader/mach-o/: loader.h
loader/objc/: objc-runtime.h
output/: boomerang.h
qtgui2/: DecompilerThread.cpp  DecompilerThread.h  Makefile.am  main.cpp  mainwindow.cpp  mainwindow.h  mypthread.cpp  rtleditor.cpp  rtleditor.h
signatures/: Makefile.am
transform/: Makefile.am  generic.cpp  generic.h  rdi.cpp  rdi.h  transformation-parser.ypp  transformation-scanner.lpp  transformer.cpp
transformations/: Makefile.am  int_arith.t  int_canolize.t  int_canolize.t.old  logic_canolize.t  mem_canolize.t  struct_member.t
type/: Makefile.am  TypeTest.cpp  TypeTest.h  constraint.cpp  dfa.cpp  type.cpp
util/: Makefile.am  log.cpp  util.cpp
xslt/: rtl.xsl
